--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block">
+<!--               <span class="link-block"> -->
                 <!-- @PAN TODO: change links -->
-                <a href="https://arxiv.org/pdf/2406.05862" class="external-link button is-normal is-rounded">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf" aria-hidden="true"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
+<!--                 <a href="https://arxiv.org/pdf/2406.05862" class="external-link button is-normal is-rounded"> -->
+<!--                   <span class="icon"> -->
+<!--                       <i class="fas fa-file-pdf" aria-hidden="true"></i> -->
+<!--                   </span> -->
+<!--                   <span>arXiv</span> -->
+<!--                 </a> -->
+<!--               </span> -->
 <!--              <span class="link-block">-->
 <!--                &lt;!&ndash; @PAN TODO: change links &ndash;&gt;-->
 <!--                <a href="https://zenodo.org/records/10546498"-->
@@ -178,14 +178,14 @@
 <!--                  <span>zenodo</span>-->
 <!--                </a>-->
 <!--              </span>-->
-              <span class="link-block">
-                <a href="https://huggingface.co/papers/2406.05862" class="external-link button is-normal is-rounded">
-                  <span class="icon">
-                    <p style="font-size:18px">🤗</p>
-                  </span>
-                  <span>HF Paper</span>
-                </a>
-              </span>
+<!--               <span class="link-block"> -->
+<!--                 <a href="https://huggingface.co/papers/2406.05862" class="external-link button is-normal is-rounded"> -->
+<!--                   <span class="icon"> -->
+<!--                     <p style="font-size:18px">🤗</p> -->
+<!--                   </span> -->
+<!--                   <span>HF Paper</span> -->
+<!--                 </a> -->
+<!--               </span> -->
               <span class="link-block">
                 <a href="https://huggingface.co/datasets/m-a-p/CII-Bench" class="external-link button is-normal is-rounded">
                   <span class="icon">
@@ -220,16 +220,16 @@
 
 
               <!-- Visualization Link. -->
-              <span class="link-block">
-                <a href="https://eval.ai/web/challenges/challenge-page/2334/overview"
-                   class="external-link button is-normal is-rounded">
-                  <span class="icon has-text-white">
-                       <p style="font-size:18px">📖</p>
+<!--               <span class="link-block"> -->
+<!--                 <a href="https://eval.ai/web/challenges/challenge-page/2334/overview" -->
+<!--                    class="external-link button is-normal is-rounded"> -->
+<!--                   <span class="icon has-text-white"> -->
+<!--                        <p style="font-size:18px">📖</p> -->
 <!--                      <i class="fa-solid fa-medal"></i>-->
-                  </span>
-                  <span>EvalAI</span>
-                </a>
-              </span>
+<!--                   </span> -->
+<!--                   <span>EvalAI</span> -->
+<!--                 </a> -->
+<!--               </span> -->
               <!-- Twitter Link. -->
 <!--              <span class="link-block">-->
 <!--                <a href="https://twitter.com/GeZhang86038849/status/1749660947223044325"-->
