--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-<!--               <span class="link-block"> -->
+              <span class="link-block">
                 <!-- @PAN TODO: change links -->
-<!--                 <a href="https://arxiv.org/pdf/2406.05862" class="external-link button is-normal is-rounded"> -->
-<!--                   <span class="icon"> -->
-<!--                       <i class="fas fa-file-pdf" aria-hidden="true"></i> -->
-<!--                   </span> -->
-<!--                   <span>arXiv</span> -->
-<!--                 </a> -->
-<!--               </span> -->
+                <a href="https://arxiv.org/pdf/2410.13854" class="external-link button is-normal is-rounded">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf" aria-hidden="true"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+               </span>
 <!--              <span class="link-block">-->
 <!--                &lt;!&ndash; @PAN TODO: change links &ndash;&gt;-->
 <!--                <a href="https://zenodo.org/records/10546498"-->
@@ -178,14 +178,14 @@
 <!--                  <span>zenodo</span>-->
 <!--                </a>-->
 <!--              </span>-->
-<!--               <span class="link-block"> -->
-<!--                 <a href="https://huggingface.co/papers/2406.05862" class="external-link button is-normal is-rounded"> -->
-<!--                   <span class="icon"> -->
-<!--                     <p style="font-size:18px">🤗</p> -->
-<!--                   </span> -->
-<!--                   <span>HF Paper</span> -->
-<!--                 </a> -->
-<!--               </span> -->
+              <span class="link-block"> -->
+                <a href="https://huggingface.co/papers/2410.13854" class="external-link button is-normal is-rounded">
+                  <span class="icon">
+                    <p style="font-size:18px">🤗</p>
+                  </span>
+                  <span>HF Paper</span>
+                </a>
+              </span>
               <span class="link-block">
                 <a href="https://huggingface.co/datasets/m-a-p/CII-Bench" class="external-link button is-normal is-rounded">
                   <span class="icon">
@@ -197,12 +197,12 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://github.com/MING_X/CII-Bench" class="external-link button is-normal is-rounded">
+                <a href="https://github.com/MING-ZCH/CII-Bench" class="external-link button is-normal is-rounded">
                   <span class="icon">
                       <i class="fab fa-github" aria-hidden="true"></i>
                   </span>
                   <span>Code</span>
-                  </a>
+                </a>
               </span>
               <!-- Dataset Link. -->
 
@@ -1039,11 +1039,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
-    <pre><code>@article{XXX,
-  title={CAN MLLMS UNDERSTAND THE DEEP IMPLICATION BEHIND CHINESE IMAGES?},
-  author={XXX},
-  journal={XXX},
-  year={2024}
+    <pre><code>@misc{zhang2024mllmsunderstanddeepimplication,
+      title={Can MLLMs Understand the Deep Implication Behind Chinese Images?}, 
+      author={Chenhao Zhang and Xi Feng and Yuelin Bai and Xinrun Du and Jinchang Hou and Kaixin Deng and Guangzeng Han and Qinrui Li and Bingli Wang and Jiaheng Liu and Xingwei Qu and Yifei Zhang and Qixuan Zhao and Yiming Liang and Ziqiang Liu and Feiteng Fang and Min Yang and Wenhao Huang and Chenghua Lin and Ge Zhang and Shiwen Ni},
+      year={2024},
+      eprint={2410.13854},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2410.13854}, 
 }
 </code></pre>
   </div>
