--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <!--                  <span>zenodo</span>-->
 <!--                </a>-->
 <!--              </span>-->
-              <span class="link-block"> -->
+              <span class="link-block">
                 <a href="https://huggingface.co/papers/2410.13854" class="external-link button is-normal is-rounded">
                   <span class="icon">
                     <p style="font-size:18px">🤗</p>
