--- a/index.html
+++ b/index.html
@@ -1039,14 +1039,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
-    <pre><code>@misc{zhang2024mllmsunderstanddeepimplication,
+    <pre><code>@article{zhang2024ciibench,
       title={Can MLLMs Understand the Deep Implication Behind Chinese Images?}, 
       author={Chenhao Zhang and Xi Feng and Yuelin Bai and Xinrun Du and Jinchang Hou and Kaixin Deng and Guangzeng Han and Qinrui Li and Bingli Wang and Jiaheng Liu and Xingwei Qu and Yifei Zhang and Qixuan Zhao and Yiming Liang and Ziqiang Liu and Feiteng Fang and Min Yang and Wenhao Huang and Chenghua Lin and Ge Zhang and Shiwen Ni},
-      year={2024},
-      eprint={2410.13854},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2410.13854}, 
+      journal={arXiv preprint arXiv:2410.13854},
+      year={2024}
 }
 </code></pre>
   </div>
