--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         .hidden {
             display: none;
         }
+        h2.title.is-3 {
+            background-color: #e8f5e9; /* 浅绿色背景 */
+            padding: 15px;  /* 内边距 */
+            border-radius: 5px; /* 圆角 */
+            margin: 15px 0; /* 上下外边距 */
+            transition: background-color 0.3s ease; /* 平滑过渡效果 */
+        }
     </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://kit.fontawesome.com/f8ddf9854a.js" crossorigin="anonymous"></script>
