--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             </h1>
           <h2 class="subtitle is-3 publication-subtitle">
             Can MLLMs Understand the Deep Implication Behind Chinese Images?
-
-          <!-- </h2>
-          <div class="is-size-5 publication-authors">
+          </h2>
+          <p style="color: red; font-size: 1.5em; font-weight: bold;">ACL 2025 Main</p>
+          <!-- <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://xiangyue9607.github.io/" style="text-decoration: none; color: inherit;">Xiang Yue*<sup style="color:#6fbf73;">†,1</sup></a>,
             </span>
